Fixed spinner bar alignment in reset investor password button

--- a/src/sass/app/metatrader.scss
+++ b/src/sass/app/metatrader.scss
@@ -329,7 +329,6 @@
             }
             button .barspinner.white {
                 height: 13px;
-                margin: 3px;
             }
             #frm_cashier {
                 .mt-panel {
